# BOT_SHASHA

./: .gitignore  111.json  111.py  DEPLOY.md  README.md  __init__.py  pyproject.toml  requirements.txt  run_bot.py  testv0.1.py  testv0.2.py  zhipu_demo.py
config/: README.md  bot_settings.example.json  bot_settings.json  group_settings.example.json
deploy/: deploy.bat  deploy.sh  shasha-bot.service
docs/: ARCHITECTURE.md
shasha_bot/: __init__.py  commands.py  commands_custom.py  cq.py  group_config.py  handler.py  logging.py  router.py  server.py  services.py  settings.py
shasha_bot/ai/: __init__.py  aliyun_edit.py  deepseek.py  siliconflow.py  zhipu_vision.py
shasha_bot/handlers/: __init__.py  chitchat.py  image.py  reply.py  text.py
shasha_bot/memory/: __init__.py  emotion.py  manager.py  models.py  prompt.py  storage.py
