[project]
name = "shasha-bot"
version = "0.4.0"
description = "QQ Bot with memory and emotion capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "openai>=2.14.0",
    "websockets>=15.0.0",
    "dashscope>=1.20.0",
    "zai-sdk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
